* Fixed multiple repeat entries in chart of accounts drop down (Nick P, 812)
* Fixed transaction list empty if searched by creditor name (Nick P, 806)
* Fixed cash transfer enforces ticked 'FX' boxes (Nick P, 802)
* Fixed extra newline-related errors in tex template engine (Chris T)
* Added updated Hungarian charts of accounts (Pongracz Istvan, 813)

Nick P is Nick Prater

Changelog for 1.3.31
* Removed spurious commit saving orders (Chris T)
* Removed check for reversing too many sales, since this poses problems 
  in corner cases with no good solutions (Chris T)
* R5680-1, (tentatively) fixes to shipping/invoice onhand numbers (Chris T)
* Fixed customer search showing sales rather than billing addresses (Chris T)
* Fixed parts descriptions not showing on inventory actibity report (Chris T)
* Fixed encoding issues when printing from the queue (Chris T, 3602073)
* Fixed spurious commit in Invoice Shipped (Chris T)
* Fixed handling of long notes/descriptions on GL (Chris T, 3603939)
* Fixed handling of translation strings in Contact Search (Chris T, 3604721)
* Fixed handling of spaces in debit/credit cols/gl (Chris T, 3607219)
* Fixed handling of invoice numbers on recurring (Chris T, 3602382)
* Fixed language code changes delayed (Chris T, 3607220) 
* Fixed order by on reconciliation screen not working (Chris T, 3607223)
* Fixed country changes to companies not saving (Chris T, 3607437)
* Fixed customer search on address data (Chris T, 3607436)

Changelog for 1.3.30
* Documented behavior of Outstanding Summary report (Chris T, 3601314)
* Fix for translations showing multiple types (Chris T, 3601737)
* Updated gnome.css (Pongracz Istvan)
* Fixed vendor cash account link not respected in payment interface (Chris T)
* Fixed workflow for multiple address entry (Chris T,  3602111)
* Fixed print and save buttons on orders (Chris T, 3602071)
* Fixing history report blank when no fx (Chris T, 3602084)
* More CSS hooks (Chris T)
* Fixed DB API for reopening books (Chris T)